--- a/asssets/css/mobile-login.css
+++ b/asssets/css/mobile-login.css
@@ -1,45 +1,47 @@
+@font-face {
+    font-family: Inter;
+    src: url(./fonts/Inter-Regular.ttf);
+}
+
+
+* {
+    margin: 0;
+    scroll-behavior: smooth;
+}
 
 body {
-    position: relative;
-    width: 428px;
-    height: 926px;
-    background: #F6F7F8;
+    font-family: Inter, sans-serif;
+
 }
 
 header {
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 10px;
-    position: absolute;
-    width: 64px;
-    height: 78.03px;
-    left: calc(50% - 64px/2 - 144px);
-    top: calc(50% - 78.03px/2 - 386.98px);
+    justify-content: flex-start;
+    width: 372px;
+    flex-direction: column;
 }
 
 header img {
     width: 64px;
     height: 78.03px;
+    margin-left: 38px;
+    padding-top: 37px;
 }
 
-.insideWindow{
+.inside-window {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 35px 0px;
     gap: 35px;
     position: absolute;
-    width: 372px;
+    max-width: 372px;
     height: 573px;
-    left: 28px;
     top: 194px;
-    /* white */
     background: #FFFFFF;
-    /* shadoe backlog box */
     box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.04);
     border-radius: 30px;
+    width: 100%;
 }
 
 h1 {
@@ -54,11 +56,13 @@ h1 {
     color: #000000;
 }
 
-.e-mail, .password {
-    height: 41px;
+.e-mail,
+.password {
+    height: 25px;
     background: #FFFFFF;
     border: none;
-    margin: 8px 21px;
+    margin: 8px 0px;
+    margin-left: 8px;
     font-size: 21px;
     font-weight: 400;
     color: black;
@@ -68,23 +72,208 @@ h1 {
 
 }
 
-.e-mail::placeholder, .password::placeholder {
+.e-mail::placeholder,
+.password::placeholder {
     color: #d1d1d1c4;
 }
 
-.input-field{
+.input-field {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     align-items: center;
     border: 1px solid #D1D1D1;
     border-radius: 10px;
-    width: 327px;
-    margin: 49px 0;
+    margin: 49px 0px;
+    height: 41px;
+    margin-bottom: 24px;
+    margin-right: 20.5px;
+    margin-left: 20.5px;
 }
 
-.input-field img{
-    margin: 10px 21px;
-    margin-left: 0;
+.input-field img {
+    /* margin-right: 21px; */
+    z-index: 99;
+    background-color: white;
+}
 
+.wrong-password {
+    color: red;
+    font-size: 13px;
+    margin-top: -10px;
+    padding-bottom: 8px;
+    margin: 0 22.5px;
+}
+
+.forgot {
+    text-decoration: none;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 120%;
+    color: #29ABE2;
+    margin: 0 22.5px;
+}
+
+.checkbox-container {
+    display: flex;
+    padding-top: 32.5px;
+    padding-bottom: 35px;
+    align-items: center;
+    margin: 0 22.5px;
+}
+
+.checkbox-container label {
+    padding-left: 20px;
+}
+
+.checkbox-container input {
+    cursor: pointer;
+}
+
+.checkbox-container input[type="checkbox"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    background: linear-gradient(180deg, #F9F9F9 0%, #F0F0F0 100%);
+    border: 1px solid #000000;
+    border-radius: 3px;
+}
+
+.checkbox-container input[type="checkbox"]:checked {
+    background-color: #ffffff;
+}
+
+.checkbox-container input[type="checkbox"]:checked::before {
+    content: "\2713";
+    display: inline-block;
+    font-size: 22px;
+    color: #000000;
+    vertical-align: middle;
+    text-align: center;
+    padding-left: 3px;
+    margin-top: -7px;
+}
+
+.btn-container {
+    gap: 33px;
+}
+
+.login-btn-container,
+.guest-btn-container {
+    display: flex;
+    justify-content: center;
+}
+
+.login-btn {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    background: #2A3647;
+    color: #FFFFFF;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 4px 0px;
+    width: 180px;
+    height: 51px;
+    cursor: pointer;
+}
+
+.guest-btn {
+    background: #FFFFFF;
+    color: #2A3647;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 120%;
+    gap: 10px;
+    width: 180px;
+    height: 51px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.main-content {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    min-width: 330px;
+    height: 926px;
+    background: #F6F7F8;
+}
+
+form {
+    margin-top: -55px;
+    width: 100%;
+}
+
+.password-icon {
+    color: lightgray;
+    cursor: pointer;
+    padding-top: 5px;
+}
+
+.sign-up-container {
+    height: 100px;
+    background-color: #F6F7F8;
+    width: 372px;
+    display: flex;
+    justify-content: center;
+    gap: 35px;
+    align-items: baseline;
+
+}
+
+.sign-up-container span {
+    font-size: 21px;
+    font-weight: 400;
+}
+
+.sign-up-container button {
+    display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 4px 16px;
+gap: 10px;
+font-weight: 700;
+font-size: 16px;
+width: 96px;
+height: 51px;
+color: white;
+background: #2A3647;
+border-radius: 8px;
+cursor: pointer;
+}
+
+.outer-container {
+    background-color: #F6F7F8;
+    display: flex;
+    justify-content: center;
+}
+
+#checkmark-container {
+cursor: pointer;
+}
+
+
+.arrow-container {
+   max-width: 372px;
+   width: 100%;
+   margin-top: -7px;
+}
+
+.arrow-container a {
+    margin-left: 33px;
+}
+.sign-in-headline {
+    margin-top: -48px;
+
+}
+
+.sign-in-container {
+    height: 501px;
 }
