--- a/asssets/css/privacy_policy.css
+++ b/asssets/css/privacy_policy.css
@@ -1,3 +1,7 @@
+@font-face{
+  font-family: Inter;
+  src: url(asssets/fonts/Inter-Regular.ttf);
+}
 
 body {
   background-color: #F5F5F5;
@@ -6,7 +10,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  font-family: 'Inter';
+  font-family: Inter, sans-serif;
 }
 
 h1 {
