--- a/asssets/css/contacts.css
+++ b/asssets/css/contacts.css
@@ -1,15 +1,17 @@
-.contact-frame{
-    width: 428px;
+body{
+    flex-direction: column;
 }
 
 .new-contact-frame {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-    margin-right: 21px;
     padding-top: 17px;
     gap: 10px;
-    width: 428px;
+}
+
+.new-contact-container-frame{
+    display: flex;
+    justify-content:flex-end;
 }
 
 .new-contact-container {
@@ -19,6 +21,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-right: 21px;
     padding: 18px 10px;
     gap: 10px;
     width: 193px;
@@ -31,12 +34,10 @@
 }
 
 .contact-frame {
-    width: 428px;
-    height: 1085px;
-
-    margin-left: 37, 5px;
     background: #FFFFFF;
-
+    display: flex;
+    flex-direction: column;
+   align-items: center;
 }
 
 .contact-frame h2 {
@@ -93,25 +94,17 @@ hr {
 
 /* ===================== Big Contact ======================= */
 
-.content-big-contact{
-    width: 428px;
-    
-}
-
 .big-contact-frame {
     position: fixed;
-    top: 0;
-    bottom: 0;
+    top: 80;
+    bottom: 80;
     left: 0;
     right: 0;
     z-index: 99;
-    background: #FFFFFF;
-    width: 428px;
 }
 
 .big-contact-frame-header {
     margin-top: 34px;
-    width: 428px;
 }
 
 .h1-back-arrow{
@@ -214,35 +207,37 @@ hr {
 
 .edit-contact, .add-contact{
     position: fixed;
-    top: 0;
+    top: 80px;
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 999;
     display: flex;
     flex-direction: column;
     align-items: center;
     background:  #F5F5F5;;
+    z-index: 99;
 }
 
 .edit-contact-head{
     height: 364px;
-    width: 406px;
     background: #2A3647;
     border-radius: 20px  20px 0 0;
     position: relative;
 }
 
+.edit-contact-frame{
+    max-width: 320px;
+}
+
 .edit-contact-bottom{
     height: 761px;
-    width: 406px;
     background: #FFFFFF;
     position: relative;
 }
 .close-x{
     margin-top: 21px;
+    margin-right: 16px;
     margin-bottom: 91px;
-    margin-left: 356px;
     cursor: pointer;
 }
 
@@ -347,6 +342,11 @@ form{
 .create-contact-container{
     display: flex;
     justify-content: center;
+}
+
+.x-container{
+    display: flex;
+    justify-content: flex-end;
 }
 
 .tasks-are-better{
