--- a/asssets/css/mobile-login.css
+++ b/asssets/css/mobile-login.css
@@ -57,7 +57,8 @@ h1 {
 }
 
 .e-mail,
-.password {
+.password,
+.name {
     height: 25px;
     background: #FFFFFF;
     border: none;
@@ -73,7 +74,8 @@ h1 {
 }
 
 .e-mail::placeholder,
-.password::placeholder {
+.password::placeholder,
+.name::placeholder {
     color: #d1d1d1c4;
 }
 
@@ -90,9 +92,13 @@ h1 {
 }
 
 .input-field img {
-    /* margin-right: 21px; */
     z-index: 99;
     background-color: white;
+}
+
+.person-img {
+    height: 19px;
+    width: 21px;
 }
 
 .wrong-password {
@@ -129,40 +135,20 @@ h1 {
     cursor: pointer;
 }
 
-.checkbox-container input[type="checkbox"] {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    width: 20px;
-    height: 20px;
-    background: linear-gradient(180deg, #F9F9F9 0%, #F0F0F0 100%);
-    border: 1px solid #000000;
-    border-radius: 3px;
-}
-
-.checkbox-container input[type="checkbox"]:checked {
-    background-color: #ffffff;
-}
-
-.checkbox-container input[type="checkbox"]:checked::before {
-    content: "\2713";
-    display: inline-block;
-    font-size: 22px;
-    color: #000000;
-    vertical-align: middle;
-    text-align: center;
-    padding-left: 3px;
-    margin-top: -7px;
-}
-
 .btn-container {
     gap: 33px;
 }
 
 .login-btn-container,
-.guest-btn-container {
+.guest-btn-container{
     display: flex;
     justify-content: center;
+}
+
+.forgot-btn-container {
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
 }
 
 .login-btn {
@@ -194,6 +180,36 @@ h1 {
     height: 51px;
     border-radius: 8px;
     cursor: pointer;
+}
+
+.fortgot-password-btn {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    background: #2A3647;
+    color: #FFFFFF;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 4px 0px;
+    width: 180px;
+    height: 51px;
+    cursor: pointer;
+    gap: 10px;
+}
+
+.forgot-password-text{
+    font-size: 21px;
+    text-align: center;
+    font-weight: 400;
+}
+
+.forgot-password-headline{
+    font-size: 40px;
+    padding-bottom: 29px;
+    margin-top: -27px;
 }
 
 .main-content {
@@ -234,19 +250,19 @@ form {
 
 .sign-up-container button {
     display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-padding: 4px 16px;
-gap: 10px;
-font-weight: 700;
-font-size: 16px;
-width: 96px;
-height: 51px;
-color: white;
-background: #2A3647;
-border-radius: 8px;
-cursor: pointer;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 4px 16px;
+    gap: 10px;
+    font-weight: 700;
+    font-size: 16px;
+    width: 96px;
+    height: 51px;
+    color: white;
+    background: #2A3647;
+    border-radius: 8px;
+    cursor: pointer;
 }
 
 .outer-container {
@@ -256,13 +272,13 @@ cursor: pointer;
 }
 
 #checkmark-container {
-cursor: pointer;
+    cursor: pointer;
 }
 
 .arrow-container {
-   max-width: 372px;
-   width: 100%;
-   margin-top: -7px;
+    max-width: 372px;
+    width: 100%;
+    margin-top: -7px;
 }
 
 .arrow-container a {
@@ -280,4 +296,13 @@ cursor: pointer;
 
 .sign-in-container {
     height: 501px;
+}
+
+.sign-up-btn {
+    margin-top: 20px;
+}
+
+.line {
+    margin-top: -12px;
+    margin-bottom: -6px;
 }
