--- a/asssets/templates/footer.html
+++ b/asssets/templates/footer.html
@@ -1,17 +1,16 @@
-
-        <div class="icon-container">
-            <img class="icon" src="/asssets/img/Summary_icon_grey.svg" alt="">
-            <span>Summary</span>
+        <div onclick="changeBackground()" id="summary-div" class="icon-container">
+            <a href="summary.html"><img class="icon" src="/asssets/img/Summary_icon_grey.svg" alt=""></a>
+            <a href="summary.html"><span>Summary</span></a>
         </div>
-        <div class="icon-container">
-            <img class="icon" src="/asssets/img/Board_icon.svg" alt="">
-            <span>Board</span>
+        <div id="board-div" class="icon-container">
+            <a href="board.html"><img class="icon" src="/asssets/img/Board_icon.svg" alt=""></a>
+            <a href="board.html"><span>Board</span></a>
         </div>
-        <div class="icon-container">
-            <img class="add-task-icon" src="/asssets/img/Add_Task_icon.svg" alt="">
-            <span>Add Task</span>
+        <div id="add-task-div" class="icon-container">
+            <a href="add_task.html"><img class="add-task-icon" src="/asssets/img/Add_Task_icon.svg" alt=""></a>
+            <a href="add_task.html"><span>Add Task</span></a>
         </div>
-        <div class="icon-container">
-            <img class="icon-contacts" src="/asssets/img/Contacts.svg" alt="">
-            <span>Contacts</span>
+        <div id="contacts-div" class="icon-container">
+            <a href="contacts.html"><img class="icon-contacts" src="/asssets/img/Contacts.svg" alt=""></a>
+            <a href="contacts.html"><span>Contacts</span></a>
         </div>
