--- a/asssets/templates/header.html
+++ b/asssets/templates/header.html
@@ -1,4 +1,4 @@
 <header>
-    <img class="logo" src="/asssets/img/mobile-login-logo-dark.svg" alt="">
-    <img class="person" src="/asssets/img/christina-wocintechchat-com-0Zx1bDv5BNY-unsplash 1.svg" alt="">
+    <a href="guest_hello.html"><img class="logo" src="/asssets/img/mobile-login-logo-dark.svg" alt=""></a>
+    <a href="index.html"><img class="person" src="/asssets/img/christina-wocintechchat-com-0Zx1bDv5BNY-unsplash 1.svg" alt=""></a>
 </header>
