--- a/asssets/css/footer.css
+++ b/asssets/css/footer.css
@@ -11,6 +11,7 @@ body {
 footer {
     display: flex;
     align-items: center;
+    justify-content: center;
     background-color: #2A3647;
     height: 80px;
     position: fixed;
@@ -18,41 +19,46 @@ footer {
     right: 0px;
     left: 0;
     gap: 10px;
-    max-width: 428px;
+    max-width: 768px;
     Padding: 0px, 12px, 0px, 12px;
     width: 100%;
+    z-index: 99;
 }
 
 .icon-container {
     display: flex;
     flex-direction: column;
-    padding: 13px;
+    /* padding: 13px; */
     align-items: center;
     width: 80px;
     height: 80px;
     justify-content: center;
+        padding-bottom: 10px !important;
 
 }
 
 .icon {
     padding-top: 14.5px;
     height: 22px;
-    padding-bottom: 14px;
+    padding-bottom: 6px;
     cursor: pointer;
 }
 
 .icon-container span {
     cursor: pointer;
-    padding-bottom: 10px;
     color: #CDCDCD;
     font-size: 16px;
+}
+
+.icon-container a {
+    text-decoration: none;
 }
 
 .add-task-icon {
     padding-top: 14.5px;
     height: 26px;
     width: 26px;
-    padding-bottom: 14px;
+    padding-bottom: 6px;
     cursor: pointer;
 }
 
@@ -64,9 +70,15 @@ footer {
 }
 
 .icon-contacts {
-    width: 24px;
-    height: 28px;
-    padding-bottom: 14px;
+    width: 24px !important;
+    height: 28px !important;
+    padding-bottom: 6px;
     cursor: pointer;
     padding-top: 14.5px;
+}
+
+@media (max-width:420px) {
+    .icon-container span {
+        font-size:13px ;
+    }
 }
