--- a/asssets/css/header.css
+++ b/asssets/css/header.css
@@ -4,7 +4,8 @@ header {
     justify-content: space-between;
     height: 80px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
-    max-width: 428px;
+    max-width: 768px;
+    z-index: 99;
 }
 
 .person {
