add burger menu

--- a/asssets/templates/header.html
+++ b/asssets/templates/header.html
@@ -1,4 +1,14 @@
 <header>
-    <a href="guest_hello.html"><img class="logo" src="/asssets/img/mobile-login-logo-dark.svg" alt=""></a>
-    <a href="index.html"><img class="person" src="/asssets/img/christina-wocintechchat-com-0Zx1bDv5BNY-unsplash 1.svg" alt=""></a>
+    <a href="index.html"><img class="logo" src="/asssets/img/mobile-login-logo-dark.svg" alt=""></a>
+    <a onclick="burgerMenu()" id="person-img"><img class="person"
+            src="/asssets/img/christina-wocintechchat-com-0Zx1bDv5BNY-unsplash 1.svg" alt=""></a>
 </header>
+<div onclick="closeBurgerMenu()" id="background-container">
+    <div class="burger-menu-outer-container">
+        <div id="burger-menu">
+            <a href="#">Help</a>
+            <a href="#">Leagal notice</a>
+            <a href="#">Log out</a>
+        </div>
+    </div>
+</div>
