--- a/asssets/css/header.css
+++ b/asssets/css/header.css
@@ -22,3 +22,38 @@ header {
     height: 40px;
     padding-left: 25px;
 }
+
+#background-container {
+    width: 100%;
+    height: 93vh;
+    position: absolute;
+    display: none;
+}
+
+.burger-menu-outer-container {
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+    padding-right: 28px;
+}
+
+#burger-menu {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    position: absolute;
+    background-color: #2A3647;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 10px 0px 10px 10px;
+    padding: 10px;
+    width: 110px;
+    height: 99px;
+}
+
+#burger-menu a {
+    text-decoration: none;
+    color: #CDCDCD;
+    font-size: 16px;
+    margin-left: 8px;
+    margin-top: 10px;
+}
