--- a/task_edit.css
+++ b/task_edit.css
@@ -70,7 +70,7 @@ form {
 
 .input-field {
     width: 100%;
-    height: 41px;
+    height: 37px;
     background: #FFFFFF;
     border: 1px solid #D1D1D1;
     border-radius: 10px;
@@ -78,15 +78,18 @@ form {
     font-size: 16px;
     position: relative;
     text-indent: 21px;
+    margin-right: 32px;
 }
 
 
 .input-lable {
     display: block;
-    margin-top: 47px;
+    margin-top: 23px;
     margin-bottom: 5px;
     font-weight: 400;
     font-size: 16px;
+    margin-right: 33px;
+    
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator {
@@ -159,7 +162,7 @@ input[type="date" i] {
 
 .select-one {
     background-color: #fff;
-    height: 41px;
+    height: 19px;
     border-radius: 10px;
     display: flex;
     align-items: center;
