--- a/asssets/css/contacts.css
+++ b/asssets/css/contacts.css
@@ -232,7 +232,7 @@ hr {
     max-width: 320px;
 }
 
-.edit-contact-bottom{
+.edit-contact-bottom, .add-contact-bottom{
     background: #FFFFFF;
     position: relative;
 }
@@ -321,7 +321,7 @@ form{
     justify-content: center;
 }
 
-.delete{
+.delete, .cancle {
     border: 1px solid rgba(0, 0, 0, 0.5);
     padding: 10px 13px;
     margin-right: 8px;
