help.html responsiv

--- a/asssets/css/help.css
+++ b/asssets/css/help.css
@@ -68,14 +68,11 @@ border: none;
 }
 
 .wrapper {
-  margin-top: 114px;
-  margin-left: 31px;
-  margin-right: 34px;
+  margin-top: 30px;
+  margin: 32px;
+  margin-bottom: 100px;
 }
 
-.wrapper p {
-  font-weight: bold;
-}
 
 .wrapper div {
   display: flex;
