--- a/asssets/templates/header.html
+++ b/asssets/templates/header.html
@@ -8,7 +8,7 @@
         <div id="burger-menu">
             <a href="#">Help</a>
             <a href="#">Leagal notice</a>
-            <a href="#">Log out</a>
+            <a href="index.html">Log out</a>
         </div>
     </div>
 </div>
