--- a/board.css
+++ b/board.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: 'Inter';
     font-style: normal;
@@ -8,42 +7,45 @@ body {
 
 
 
-.orange{
+.orange {
     background: #FF7A00;
 }
 
-.purple{
+.purple {
     background: #9327FF;
 }
 
-.light-blue{
+.light-blue {
     background: #29ABE2;
 }
 
-.pink{
+.pink {
     background: #FC71FF;
 }
-.blue{
+
+.blue {
     background: #0038FF;
 }
 
-.green{
+.green {
     background: #02CF2F;
 }
 
-.light-green{
+.light-green {
     background: #1FD7C1;
 }
 
-.red{
-    background: #AF1616 ;
+.red {
+    background: #AF1616;
 }
-.dark-blue{
-    background: #2A3647 ;
+
+.dark-blue {
+    background: #2A3647;
 }
 
 .main-div {
-    background-color: #F5F5F5;;
+    background-color: #F5F5F5;
+    ;
     width: 428px;
     height: auto;
     display: flex;
@@ -81,7 +83,7 @@ body {
     height: 40px;
 }
 
-.search-bar{
+.search-bar {
     position: relative;
     margin-left: 33px;
     width: 251px;
@@ -94,7 +96,7 @@ body {
     height: 37px;
     border: 1px solid #A8A8A8;
     border-radius: 10px;
-}    
+}
 
 .search-icon {
     position: absolute;
@@ -116,7 +118,7 @@ body {
     padding-left: 21px;
 }
 
-    /*////////////////// Main Content of Cards /////////////////*/
+/*////////////////// Main Content of Cards /////////////////*/
 
 .task-content {
     height: auto;
@@ -142,7 +144,7 @@ body {
     margin-bottom: 22px;
 }
 
-.card-head{
+.card-head {
     cursor: pointer;
 }
 
@@ -161,7 +163,11 @@ body {
     cursor: pointer;
 }
 
-.task-category, .task-title, .task-description, .task-progress, .task-assignedTo {
+.task-category,
+.task-title,
+.task-description,
+.task-progress,
+.task-assignedTo {
     margin-left: 21px;
 }
 
@@ -193,7 +199,7 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    
+
 }
 
 .progress-steps {
@@ -206,20 +212,21 @@ body {
     width: 251px;
 }
 
-.task-assignedTo{
+.task-assignedTo {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin-top: 8px;
 }
 
-.task-icons{
+.task-icons {
     display: flex;
 }
 
 .task-assignedTo img {
     margin-right: 28px;
 }
+
 .task-assignedTo span {
     display: flex;
     justify-content: center;
@@ -251,3 +258,8 @@ body {
     color: #A8A8A8;
 }
 
+@media (min-width:1024px) {
+    .main-div {
+        margin-left: 232px;
+    }
+}
