--- a/summary.css
+++ b/summary.css
@@ -155,3 +155,9 @@ img {
 .boxshadow {
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
 }
+
+@media (min-width: 1024px) {
+    .main-div {
+        margin-left: 232px;
+    }
+}
